syntax = "proto3";

// 帧同步消息
message FrameRpc{
  int32  methodHash = 1; // 方法hash
  int32  behaviorIdx = 2; // 行为id
  bytes  params = 3; // 参数
}